arrivaltime, multihead-attention

--- a/model/data.ipynb
+++ b/model/data.ipynb
@@ -59,6 +59,67 @@
    "source": [
     "get_mapper(dataset_path=dataset_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5788f00a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ae49ff9",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- np.load()\n",
+    "- data_structure: item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "86ab942b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "location_mapper = np.load(os.path.join(dataset_path, 'location_mapper.npy'), allow_pickle=True).item()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "212ca430",
+   "metadata": {},
+   "source": [
+    "- dict: items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6ff30a5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: 9605 -> 0\n",
+      "1: 2085 -> 1\n",
+      "2: 6539 -> 2\n",
+      "3: 12587 -> 3\n",
+      "4: 12500 -> 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, (loc, idx) in enumerate(list(location_mapper.items())[:5]):\n",
+    "    print(f'{i}: {loc} -> {idx}')"
+   ]
   }
  ],
  "metadata": {
