--- a/model/data.ipynb
+++ b/model/data.ipynb
@@ -120,11 +120,51 @@
     "for i, (loc, idx) in enumerate(list(location_mapper.items())[:5]):\n",
     "    print(f'{i}: {loc} -> {idx}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aa609690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataloader import datetime_to_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4893d941",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weekday, hour = datetime_to_features(1672567200000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "33c29671",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weekday)\n",
+    "print(hour)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stgcn",
+   "display_name": "MCLP",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
