--- a/model/data.ipynb
+++ b/model/data.ipynb
@@ -120,6 +120,46 @@
     "for i, (loc, idx) in enumerate(list(location_mapper.items())[:5]):\n",
     "    print(f'{i}: {loc} -> {idx}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aa609690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataloader import datetime_to_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4893d941",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weekday, hour = datetime_to_features(1672567200000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "33c29671",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weekday)\n",
+    "print(hour)"
+   ]
   }
  ],
  "metadata": {
