--- a/model/data.ipynb
+++ b/model/data.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "13018b23",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "875e95c7",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "ec058473",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "96449da4",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "{'0': 0, '1': 1, '2': 2}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "b81f8a12",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "[[(0, 2), (1, 1), (2, 3)], [(0, 1), (1, 3), (2, 4)], [(0, 4), (1, 5), (2, 6)]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "47a612d8",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "ad8e9ce3",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "6994776f",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "       [0.0242673 , 0.95064938, 0.02508333]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "058bf13c",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "['0', '0', '1', '2', '2', '2']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "da4a7e42",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "[(0, 2), (1, 1), (2, 3)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,23 +367,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "88e09286",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 0.05799002), (1, 0.88139576), (2, 0.0606142)]"
+       "[(0, 0.057990022), (1, 0.88139576), (2, 0.060614202)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lda[user_doc_embedding]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1fe4f9b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, '0.431*\"2\" + 0.352*\"0\" + 0.216*\"1\"'),\n",
+       " (1, '0.431*\"2\" + 0.347*\"1\" + 0.222*\"0\"'),\n",
+       " (2, '0.473*\"2\" + 0.312*\"0\" + 0.215*\"1\"')]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.print_topics()"
    ]
   }
  ],
