--- a/model/embedding.ipynb
+++ b/model/embedding.ipynb
@@ -101,6 +101,72 @@
    "source": [
     "timeslot_embedded.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d4a43f7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools import get_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b9c09500",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dir = f\"../saved_models/MP\"\n",
+    "config_path = f\"{save_dir}/settings.yml\"\n",
+    "config = get_config(config_path, easy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3d2a2b11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Adam_optimizer': {'initial_lr': 0.01, 'weight_decay': 1e-06},\n",
+       " 'Dataset': {'num_locations': 20607,\n",
+       "  'num_users': 10000,\n",
+       "  'sequence_length': 20,\n",
+       "  'topic_num': 450},\n",
+       " 'Embedding': {'base_dim': 8},\n",
+       " 'Encoder': {'encoder_type': 'trans'},\n",
+       " 'Model': {'at_type': 'attn',\n",
+       "  'batch_size': 256,\n",
+       "  'epoch': 50,\n",
+       "  'seed': 1234,\n",
+       "  'test_epoch': 50}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "483516dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from embedding import MyEmbedding\n",
+    "\n",
+    "embedding_layer = MyEmbedding(config)"
+   ]
   }
  ],
  "metadata": {
