--- a/model/embedding.ipynb
+++ b/model/embedding.ipynb
@@ -167,6 +167,96 @@
     "\n",
     "embedding_layer = MyEmbedding(config)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "24e73cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ac7c8fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding = nn.Embedding(10, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "049de535",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_embedded = embedding(torch.arange(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e2cb0f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 3])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_embedded.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a97c9e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding = nn.Embedding(24, 16)  # shape: [24, 16]\n",
+    "hour_x = torch.tensor([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6]\n",
+    "])  # shape: [2, 3]，即 bs=2，seq_len=3\n",
+    "\n",
+    "# 进行索引：\n",
+    "time_embedded = embedding(hour_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8a4db5f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 16])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_embedded.shape"
+   ]
   }
  ],
  "metadata": {
